--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -163,3 +163,11 @@ span:nth-child(2) {
   white-space: nowrap;
   color: white;
 }
+#demo{
+  margin-top: 10px;
+}
+#applyfilter{
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
