--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -187,7 +187,7 @@ a.ctaa:hover path.two {
   color: white !important;
 }
 
-#match_level_rating_district + label {
+#match_level_rating_1+ label {
   color: rgba(244,162,64,1);
   &:hover{
     color: white;
@@ -197,7 +197,7 @@ a.ctaa:hover path.two {
   }
 }
 
-#match_level_rating_district:checked + label {
+#match_level_rating_1:checked + label {
   background-color:rgba(244,162,64,1);
   border-color:rgba(244,162,64,1);
   border: solid 1px black;
@@ -205,7 +205,7 @@ a.ctaa:hover path.two {
 }
 
 
-#match_level_rating_pro_a + label {
+#match_level_rating_2 + label {
   color: rgba(255,113,67,1);
   &:hover{
     color: white;
@@ -215,14 +215,14 @@ a.ctaa:hover path.two {
   }
 }
 
-#match_level_rating_pro_a:checked + label {
+#match_level_rating_2:checked + label {
   background-color:  rgba(255,113,67,1);
   border-color: rgba(255,113,67,1);
   border: solid 1px black;
 }
 
 
-#match_level_rating_nba + label {
+#match_level_rating_3 + label {
   color:  rgba(255,53,127,1);
   &:hover{
     color: white;
@@ -232,7 +232,7 @@ a.ctaa:hover path.two {
   }
 }
 
-#match_level_rating_nba:checked + label {
+#match_level_rating_3:checked + label {
   background-color:  rgba(255,53,127,1);
   border-color:  rgba(255,53,127,1);
   border: solid 1px black;
