--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -30,7 +30,7 @@
                     collection_wrapper_class: 'category-wrapper',
                     item_wrapper_class: 'category-item',
                     input_html: {class: 'category-selector'},
-                    collection: Match::CATEGORIES%>
+                    collection: Match::DIFFICULTY%>
 
             <div class="orange-btn">
               <%= f.button :submit, "Create a game" %>
