--- a/app/assets/stylesheets/pages/_recap.scss
+++ b/app/assets/stylesheets/pages/_recap.scss
@@ -7,7 +7,7 @@
   // display: flex;
   // flex-direction: row;
   margin-bottom: 2em;
-
+  width: 25vw;
   h4{
     text-align: center;
     display: block;
@@ -15,6 +15,10 @@
   .player-avatar{
     display: flex;
     justify-content: space-between;
+    // width: 130px;
+    // height: 130px;
+
+
   }
 
   .column{
