--- a/app/views/matches/recap.html.erb
+++ b/app/views/matches/recap.html.erb
@@ -3,56 +3,56 @@
   <div class="row">
     <div class="col-8">
       <div class="row">
-        <div class="column">
-        <div class="col-12">
-          <div class="recap-team-card">
-            <h4><%= @team_one.name.capitalize %></h4>
-            <div class="player-avatar">
-              <% @team_one.users.each do |user| %>
-                <div class="cercle mx-1">
-                  <% if user.photo.attached? %>
-                    <%= cl_image_tag user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face %>
-                  <% else %>
-                    <%= user.first_name %>
-                  <% end %>
-                </div>
-              <% end %>
-              <% empty_spot = 3 - @team_one.participations.count %>
-              <% empty_spot.times do %>
-                <div class="empty mx-1"></div>
-              <% end %>
-            </div>
+        <div class="recap-team-card px-4 pt-4 pb-3">
+          <h4 class="mb-3"><%= @team_one.name.capitalize %></h4>
+          <div class="player-avatar">
+            <% @team_one.users.each do |user| %>
+              <div class="cercle mx-1">
+                <% if !user.photo.key.nil? %>
+                  <%= cl_image_tag user.photo.key, height: 70, width: 70, crop: :thumb, gravity: :face %>
+                <% else %>
+                  <%= image_tag "http://4.bp.blogspot.com/_R0Rc6mb8H6E/S1TTZJCtq8I/AAAAAAAAC9A/a50aYOK5o0o/w1200-h630-p-k-no-nu/design-fetish-no-photo-facebook-1.jpg", style: "height: 70px; width: 70px; border-radius: 50px;" %>
+
+                <% end %>
+              </div>
+            <% end %>
+            <% empty_spot = 3 - @team_one.participations.count %>
+            <% empty_spot.times do %>
+              <div class="empty mx-1">
+              <%= image_tag "http://4.bp.blogspot.com/_R0Rc6mb8H6E/S1TTZJCtq8I/AAAAAAAAC9A/a50aYOK5o0o/w1200-h630-p-k-no-nu/design-fetish-no-photo-facebook-1.jpg", style: "height: 70px; width: 70px; border-radius: 50px;" %>
+              </div>
+            <% end %>
           </div>
         </div>
 
-        <div class="col-12">
-          <div class="recap-team-card">
-            <h4><%= @team_two.name.capitalize %></h4>
+        <div class="recap-team-card px-4 pt-4 pb-3 ms-3">
+          <h4 class="mb-3"><%= @team_two.name.capitalize %></h4>
 
-            <div class="player-avatar">
-              <% @team_two.users.each do |user| %>
-                <div class="cercle mx-1">
-                  <% if user.photo.attached? %>
-                    <%= cl_image_tag user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face %>
-                  <% else %>
-                    <%= user.first_name %>
-                  <% end %>
-                </div>
-              <% end %>
-              <% empty_spot = 3 - @team_two.participations.count %>
-              <% empty_spot.times do %>
-                <div class="empty mx-1"></div>
-              <% end %>
-            </div>
+          <div class="player-avatar">
+            <% @team_two.users.each do |user| %>
+              <div class="cercle mx-1">
+                <% if !user.photo.key.nil? %>
+                  <p><%= cl_image_tag user.photo.key, height: 70, width: 70, crop: :thumb, gravity: :face %></p>
+                <% else %>
+                  <%= image_tag "http://4.bp.blogspot.com/_R0Rc6mb8H6E/S1TTZJCtq8I/AAAAAAAAC9A/a50aYOK5o0o/w1200-h630-p-k-no-nu/design-fetish-no-photo-facebook-1.jpg", style: "height: 70px; width: 70px; border-radius: 50px;" %>
 
+                <% end %>
+              </div>
+            <% end %>
+            <% empty_spot = 3 - @team_two.participations.count %>
+            <% empty_spot.times do %>
+              <div class="empty mx-1">
+                <%= image_tag "http://4.bp.blogspot.com/_R0Rc6mb8H6E/S1TTZJCtq8I/AAAAAAAAC9A/a50aYOK5o0o/w1200-h630-p-k-no-nu/design-fetish-no-photo-facebook-1.jpg", style: "height: 70px; width: 70px; border-radius: 50px;" %>
+              </div>
+            <% end %>
           </div>
+
         </div>
       </div>
 
-
-      </div>
       <div class="row">
         <%# Ajouter ce que tu veux  %>
+        <div class="card"><p> boulite  </p></div>
       </div>
     </div>
     <div class="col-4">
