--- a/app/views/matches/recap.html.erb
+++ b/app/views/matches/recap.html.erb
@@ -1,68 +1,36 @@
 
 <div class="container mt-3">
-  <div class="row">
-    <div class="col-8">
-      <div class="row">
-        <div class="column">
-        <div class="col-12">
-          <div class="recap-team-card">
-            <h4><%= @team_one.name.capitalize %></h4>
-            <div class="player-avatar">
-              <% @team_one.users.each do |user| %>
-                <div class="cercle mx-1">
-                  <% if user.photo.attached? %>
-                    <%= cl_image_tag user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face %>
-                  <% else %>
-                    <%= user.first_name %>
-                  <% end %>
-                </div>
-              <% end %>
-              <% empty_spot = 3 - @team_one.participations.count %>
-              <% empty_spot.times do %>
-                <div class="empty mx-1"></div>
-              <% end %>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12">
-          <div class="recap-team-card">
-            <h4><%= @team_two.name.capitalize %></h4>
-
-            <div class="player-avatar">
-              <% @team_two.users.each do |user| %>
-                <div class="cercle mx-1">
-                  <% if user.photo.attached? %>
-                    <%= cl_image_tag user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face %>
-                  <% else %>
-                    <%= user.first_name %>
-                  <% end %>
-                </div>
-              <% end %>
-              <% empty_spot = 3 - @team_two.participations.count %>
-              <% empty_spot.times do %>
-                <div class="empty mx-1"></div>
-              <% end %>
-            </div>
-
-          </div>
-        </div>
-      </div>
+  <%# <div class="column"> %>
 
 
-      </div>
-      <div class="row">
-        <%# Ajouter ce que tu veux  %>
-      </div>
-    </div>
-    <div class="col-4">
+    <div class="col-6 m-auto">
       <div class="chatroom"
           data-controller="match-subscription"
           data-match-subscription-match-id-value="<%= @match.id %>"
           data-match-subscription-current-user-id-value="<%= current_user.id %>">
+        <div class="player-avatar">
+          <div class="d-flex left-team">
+            <% @team_one.users.each do |user| %>
+              <div class="cercle mx-1">
+                <% if user.photo.attached? %>
+                <%= cl_image_tag user.photo.key, height: 70, width: 70, crop: :thumb, gravity: :face %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+          <h2>VS</h2>
+          <div class="d-flex right-team">
+            <% @team_two.users.each do |user| %>
+              <div class="cercle mx-1">
+                <% if user.photo.attached? %>
+                <%= cl_image_tag user.photo.key, height: 70, width: 70, crop: :thumb, gravity: :face %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </div>
         <h3><%= "Discuss about the match"  %></h3>
-        <div class="messages" data-match-subscription-target="messages"
-        >
+        <div class="messages" data-match-subscription-target="messages">
           <% @match.messages.each do |message| %>
           <div class="message-row d-flex <%= message.sender?(current_user) ? 'justify-content-end' : 'justify-content-start' %>">
             <div class="<%= message.sender?(current_user) ? 'sender-style' : 'receiver-style' %>">
@@ -75,7 +43,8 @@
           <%= f.input :content, label: false, placeholder: "Message", wrapper_html: {class: "flex-grow-1"} %>
           <%= f.submit "Send", class: "btn btn-primary mb-3" %>
         <% end %>
+
       </div>
     </div>
-  </div>
+  <%# </div> %>
 </div>
