--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -25,6 +25,7 @@
       border-radius: 50%;
       img {
         margin-right: -10px;
+        box-shadow: -2px 0px 3px 0px rgba(0,0,0,90%);
       }
     }
   }
