--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -173,3 +173,28 @@ span:nth-child(2) {
   padding: 0px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+.filter-form{
+
+
+  #free_slots{
+    border-radius: 1rem;
+    background-color: linen;
+    text-align: center;
+  }
+
+  #level_rating{
+    border-radius: 1rem;
+    background-color: linen;
+    text-align: center;
+  }
+  #address{
+    border-radius: 1rem;
+    background-color: linen;
+    text-align: center;
+  }
+  
+  #date{ border-radius: 1rem;
+    background-color: linen;
+    text-align: center;
+  }
+}
