--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -43,7 +43,7 @@ $title-text: 'Work Sans', sans-serif;
   box-shadow: 0 0 40px  rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
-  height: 44.25rem;
+  height: 41.25rem;
   position: absolute;
   width: 31.75rem;
   padding: 10 rem;
@@ -209,6 +209,7 @@ button:focus{
 }
 
   #new_match{
+    margin: none;
     .form-select, .form-control {
         margin: none;
         background-color: #F4F0FB;
@@ -218,4 +219,7 @@ button:focus{
         border: solid 1px black;
    }
 
+   .mb-3.select.optional.match_address {
+    margin-bottom: 0 !important;
   }
+}
