border shadow filter

--- a/app/assets/stylesheets/components/_index_cards.scss
+++ b/app/assets/stylesheets/components/_index_cards.scss
@@ -145,7 +145,7 @@ body {
   width: 100%;
   margin-top: 10px;
   margin-bottom: 5px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: #0000009e 0px 4px 33px 2px;
 }
 button, [type="button"], [type="reset"], [type="submit"] {
   -webkit-appearance: button;
@@ -192,7 +192,7 @@ span:nth-child(2) {
     background-color: linen;
     text-align: center;
   }
-  
+
   #date{ border-radius: 1rem;
     background-color: linen;
     text-align: center;
