--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,16 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon <%= "navbar-transparent" if params[:action]=="home" %> <%= "navbar-show" if params[:action]=="show" %> ">
-    <div class="container-fluid">
+    <div class="container-fluid ">
+
+    <div class="d-flex align-items-center" >
     <%= link_to root_path, class: "navbar-brand" do %>
-        <%= image_tag "balllogo" %>
-        <%= image_tag "meetball", id: "meetball" %>
-      <% end %>
+            <%= image_tag "balllogo" %>
+          <% end %>
+
+          <%= link_to matches_path , class: "navbar-brand" do%>
+            <%= image_tag "meetball", id: "meetball" %>
+            <% end %>
+    </div>
+
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
