--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,8 @@
     }
     </script>
 
-    <%= favicon_link_tag "https://cdn-icons-png.flaticon.com/512/1041/1041168.png", rel: "icon", type: "image/png" %>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1041/1041168.png">
+    <!--<%= favicon_link_tag "https://cdn-icons-png.flaticon.com/512/1041/1041168.png", rel: "icon", type: "image/png" %>-->
   </head>
 
   <body class="bg">
