--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -88,7 +88,7 @@
 
   <!-- SECTION INFOS SUR LE MATCH-->
   <div class="col-md-6 quarter" style="background-color:black; color:white;">
-    <ul class="p-3 m-3">
+    <ul class="p-3">
       <li><h4 style="text-decoration:none; font-size:bold; color:#ffa502"><%= @match.date.strftime('%A %d %B') %> at <%= @match.date.strftime('%H') %>h</h4></li>
       <li> <i class="fa-sharp fa-solid fa-location-dot"></i> <%= @match.address %></li>
       <li><i class="fa-solid fa-trophy"></i> <%= @match.category %></li>
