--- a/app/views/matches/my.html.erb
+++ b/app/views/matches/my.html.erb
@@ -47,7 +47,7 @@
                           <% end %>
                         </div>
                         <div class="ms-2 c-details">
-                            <h6 class="mb-0 card-organizer"><%= match.user.first_name %></h6>
+                            <h6 class="mb-0 card-organizer"><%= match.user.pseudo %></h6>
                         </div>
                     </div>
                     <div class="badge bg-text badge-<%= match.level_rating %>">
