--- a/app/assets/stylesheets/components/_new-sign-up.scss
+++ b/app/assets/stylesheets/components/_new-sign-up.scss
@@ -1,3 +1,9 @@
+body {
+  height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1519680772-8b5f2f1b2f1f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+
+}
+
 .button{
   border: solid 1px black;
 }
