--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="form">
 <div class="box-2 col-4">
   <img class="logo" alt="dribble-logo" src="https://cdn-icons-png.flaticon.com/512/889/889455.png" />
   <h2>Sign up</h2>
@@ -38,4 +39,5 @@
          </div>
        </div>
       <% end %>
+</div>
 </div>
